Social links footer center aligned, top nav fixed on mobile

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -16,7 +16,7 @@
 
 .social-links li {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 35px;
 }
 
 .social-links {
